deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: myapp
        image: pankajtechops/demo-app:java-1.0
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: myregistrysecret
