nodedeployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodea-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: pankajtechops/demo-app:node-1.0
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: myregistrysecret
