ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: nginx
  name: kibana-ingress
spec:
  rules:
  - host: 172-105-45-252.ip.linodeusercontent.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-kibana
            port: 
              number: 5601
